--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.56.2",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.5.4",
     "hughes-portfolio": "file:",
     "lucide-react": "^0.343.0",
     "next": "14.2.5",
