--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.56.2",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "convex": "^1.16.2",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.5.4",
     "hughes-portfolio": "file:",
     "lucide-react": "^0.343.0",
-    "next": "14.2.5",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.13.1",
     "svix": "^1.21.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
